--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "demo": "ts-node hello.ts"
+    "demo": "ts-node hello.tsx"
   },
   "devDependencies": {
     "ts-node": "7.0.1",
